fix: login wrapper layout shift

--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -17,7 +17,7 @@
 }
 
 .login-wrapper {
-  width: max-content !important;
+  width: 400px;
 }
 
 .login-card-wrapper {
